tests/snapshots/r#mod__selected_assignee.snap
---
source: tests/mod.rs
expression: view_issues
---
- assignee:
    id: 1b581539-2c14-4639-b727-0acd22f67f93
  createdAt: "2021-06-30T20:18:14.800Z"
  id: a1d909f3-21c1-4654-af2b-5a3daadd5ee3
  number: 13

