tests/snapshots/r#mod__workflow_state_selected.snap
---
source: tests/mod.rs
expression: view_issues.issues.nodes
---
- id: ca14857a-b88e-4108-b97d-1c759358b9e7
  createdAt: "2021-02-09T20:05:52.185Z"
  number: 12
  dueDate: ~
  title: Test Rust-CLI
  description: Made From Rust
  priority: 0
  estimate: ~
  team:
    id: 3e2c3a3a-c883-432f-9877-dcbb8785650a
    name: Test-1
  cycle:
    id: 7a1bebd3-4197-4e4f-a93a-3c9d51b9b044
    name: ~
    description: ~
  state:
    id: e4d5a438-381e-44b0-945f-211481f769e6
    name: Test-Column-1
    type: canceled
    description: Test-Column-1-Desc
    color: "#4cb782"
  creator:
    id: ce943fa6-e9e1-4bc5-8131-ebf3ab1928bf
    displayName: porsliana
  assignee:
    id: ce943fa6-e9e1-4bc5-8131-ebf3ab1928bf
    displayName: porsliana
  labels:
    nodes:
      - id: de7d624c-7fe7-458f-9b23-f4f8896f6026
        name: Improvement
        color: "#4EA7FC"
  project: ~
- id: eea7a43a-e4d3-4ebf-8f0d-e6538f4f5ae3
  createdAt: "2021-01-11T04:43:21.270Z"
  number: 4
  dueDate: 2021-09-07
  title: Connect GitHub or GitLab
  description: ~
  priority: 3
  estimate: ~
  team:
    id: 3e2c3a3a-c883-432f-9877-dcbb8785650a
    name: Test-1
  cycle:
    id: 92482ae3-cb27-42c0-9ee4-1f94721d0825
    name: ~
    description: ~
  state:
    id: c2e0a6dc-d8e9-40f9-9a39-6a55a995fc9e
    name: In Progress
    type: started
    description: ~
    color: "#f2c94c"
  creator: ~
  assignee: ~
  labels:
    nodes: []
  project: ~
- id: 9ec131be-f97e-4110-b9f1-39a3b61723ef
  createdAt: "2021-01-11T04:43:21.270Z"
  number: 2
  dueDate: ~
  title: "Try 3 ways to navigate Linear: Command line, keyboard or mouse"
  description: ~
  priority: 3
  estimate: ~
  team:
    id: 3e2c3a3a-c883-432f-9877-dcbb8785650a
    name: Test-1
  cycle: ~
  state:
    id: e4d5a438-381e-44b0-945f-211481f769e6
    name: Test-Column-1
    type: canceled
    description: Test-Column-1-Desc
    color: "#4cb782"
  creator: ~
  assignee:
    id: ce943fa6-e9e1-4bc5-8131-ebf3ab1928bf
    displayName: porsliana
  labels:
    nodes:
      - id: de7d624c-7fe7-458f-9b23-f4f8896f6026
        name: Improvement
        color: "#4EA7FC"
  project:
    id: 34197686-1d88-47ec-a1e0-321d9144eacd
    name: Test Project 1
    color: "#bec2c8"
- id: 63234ed0-035a-4aec-914b-19802c066b5a
  createdAt: "2021-01-11T04:43:21.270Z"
  number: 7
  dueDate: 2021-05-16
  title: Use Projects to organize work for features or releases
  description: ~
  priority: 4
  estimate: ~
  team:
    id: 3e2c3a3a-c883-432f-9877-dcbb8785650a
    name: Test-1
  cycle: ~
  state:
    id: c2e0a6dc-d8e9-40f9-9a39-6a55a995fc9e
    name: In Progress
    type: started
    description: ~
    color: "#f2c94c"
  creator: ~
  assignee:
    id: ce943fa6-e9e1-4bc5-8131-ebf3ab1928bf
    displayName: porsliana
  labels:
    nodes:
      - id: 5e948c53-e672-46d7-b2a7-dc2194ae67b4
        name: Bug
        color: "#EB5757"
  project: ~
- id: 13bfaa1c-4cf0-40d6-9d70-6c76b948261b
  createdAt: "2021-01-11T04:43:21.270Z"
  number: 1
  dueDate: 2021-05-15
  title: Welcome to Linear 👋
  description: ~
  priority: 2
  estimate: ~
  team:
    id: 3e2c3a3a-c883-432f-9877-dcbb8785650a
    name: Test-1
  cycle: ~
  state:
    id: c2e0a6dc-d8e9-40f9-9a39-6a55a995fc9e
    name: In Progress
    type: started
    description: ~
    color: "#f2c94c"
  creator: ~
  assignee:
    id: ce943fa6-e9e1-4bc5-8131-ebf3ab1928bf
    displayName: porsliana
  labels:
    nodes: []
  project: ~

