tests/snapshots/r#mod__workflow_state_single_selected.snap
---
source: tests/mod.rs
expression: view_issues
---
- createdAt: "2021-01-11T04:43:21.270Z"
  id: eea7a43a-e4d3-4ebf-8f0d-e6538f4f5ae3
  number: 4
  state:
    id: c2e0a6dc-d8e9-40f9-9a39-6a55a995fc9e
- createdAt: "2021-01-11T04:43:21.270Z"
  id: 63234ed0-035a-4aec-914b-19802c066b5a
  number: 7
  state:
    id: c2e0a6dc-d8e9-40f9-9a39-6a55a995fc9e
- createdAt: "2021-01-11T04:43:21.270Z"
  id: 13bfaa1c-4cf0-40d6-9d70-6c76b948261b
  number: 1
  state:
    id: c2e0a6dc-d8e9-40f9-9a39-6a55a995fc9e

